# test_poetry_github_B

./: pyproject.toml
test_poetry_github_b/: tline.py
tests/: test_b.py  test_tline.py
