[tool.poetry]
name = "test-poetry-github-b"
version = "0.1.0"
description = ""
authors = ["Dmitrii 108 <dmitry.shibanov@gmail.com>"]
readme = "README.md"
packages = [{include = "test_poetry_github_b"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
